--- a/SimpleReminder.csproj
+++ b/SimpleReminder.csproj
@@ -34,8 +34,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="FontAwesomeWPF, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\FontAwesomeWPF.1.0.0\lib\net45\FontAwesomeWPF.dll</HintPath>
+    <Reference Include="FontAwesome.WPF, Version=4.7.0.37774, Culture=neutral, PublicKeyToken=0758b07a11a4f466, processorArchitecture=MSIL">
+      <HintPath>..\packages\FontAwesome.WPF.4.7.0.9\lib\net40\FontAwesome.WPF.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -59,12 +59,17 @@
     </ApplicationDefinition>
     <Compile Include="DataAccess\UserAccess.cs" />
     <Compile Include="Data\UserData.cs" />
+    <Compile Include="Managers\AccountManager.cs" />
     <Compile Include="Managers\LoaderManager.cs" />
     <Compile Include="Managers\NavigationManager.cs" />
     <Compile Include="Screens\NotificationScreen.xaml.cs">
       <DependentUpon>NotificationScreen.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Tools\FileFolderHelper.cs" />
     <Compile Include="Tools\ILoaderOwner.cs" />
+    <Compile Include="Tools\IScreen.cs" />
+    <Compile Include="Tools\Logger.cs" />
+    <Compile Include="Tools\Serializer.cs" />
     <Compile Include="ViewModels\LoaderViewModel.cs" />
     <Page Include="Screens\LoginScreen.xaml">
       <SubType>Designer</SubType>
