--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FontAwesomeWPF" version="1.0.0" targetFramework="net45" />
+  <package id="FontAwesome.WPF" version="4.7.0.9" targetFramework="net45" />
 </packages>
