--- a/SimpleReminder.csproj
+++ b/SimpleReminder.csproj
@@ -65,12 +65,17 @@
     <Compile Include="Screens\NotificationScreen.xaml.cs">
       <DependentUpon>NotificationScreen.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Screens\RegisterScreen.xaml.cs">
+      <DependentUpon>RegisterScreen.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Tools\FileFolderHelper.cs" />
     <Compile Include="Tools\ILoaderOwner.cs" />
     <Compile Include="Tools\IScreen.cs" />
     <Compile Include="Tools\Logger.cs" />
+    <Compile Include="Tools\RelayCommand.cs" />
     <Compile Include="Tools\Serializer.cs" />
     <Compile Include="ViewModels\LoaderViewModel.cs" />
+    <Compile Include="ViewModels\RegisterViewModel.cs" />
     <Page Include="Screens\LoginScreen.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -103,6 +108,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Screens\NotificationScreen.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Screens\RegisterScreen.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
