--- a/DataStorage/DataStorage.csproj
+++ b/DataStorage/DataStorage.csproj
@@ -49,10 +49,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Contexts\ReminderDBContext.cs" />
-    <Compile Include="DataAccess\UserAccess.cs" />
-    <Compile Include="Migrations\201811152307222_TestMigration.cs" />
-    <Compile Include="Migrations\201811152307222_TestMigration.Designer.cs">
-      <DependentUpon>201811152307222_TestMigration.cs</DependentUpon>
+    <Compile Include="DataAccess\DBAccessor.cs" />
+    <Compile Include="Migrations\201811162220385_NewMigration.cs" />
+    <Compile Include="Migrations\201811162220385_NewMigration.Designer.cs">
+      <DependentUpon>201811162220385_NewMigration.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\ReminderData.cs" />
@@ -70,8 +70,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201811152307222_TestMigration.resx">
-      <DependentUpon>201811152307222_TestMigration.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201811162220385_NewMigration.resx">
+      <DependentUpon>201811162220385_NewMigration.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
