--- a/DataStorage/DataStorage.csproj
+++ b/DataStorage/DataStorage.csproj
@@ -37,9 +37,15 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http.Formatting, Version=5.2.6.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.6\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -49,7 +55,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Contexts\ReminderDBContext.cs" />
+    <Compile Include="DataAccess\WebAccessor.cs" />
     <Compile Include="DataAccess\DBAccessor.cs" />
+    <Compile Include="DataAccess\IDataAccess.cs" />
     <Compile Include="Migrations\201811171901149_NewMigration.cs" />
     <Compile Include="Migrations\201811171901149_NewMigration.Designer.cs">
       <DependentUpon>201811171901149_NewMigration.cs</DependentUpon>
