LoginViewModel added. Save&delete features in notification editors.

--- a/SimpleReminder/SimpleReminder.csproj
+++ b/SimpleReminder/SimpleReminder.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Tools\IScreen.cs" />
     <Compile Include="ViewModels\EditorViewModel.cs" />
     <Compile Include="ViewModels\LoaderViewModel.cs" />
+    <Compile Include="ViewModels\LoginViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\NotificationViewModel.cs" />
     <Compile Include="ViewModels\RegisterViewModel.cs" />
